<resources>
    <string name="app_name">SeriesPedia</string>
    <string name="btnTextLogin">Acceder</string>
    <string name="rememberMe">Recordar</string>
    <string name="hintUsername">ingrese su usuario</string>
    <string name="hintPassword">ingrese su contraseña</string>
    <string name="errorValidate">Verifique que no contenga espacios</string>
    <string name="titleDirector">Director: </string>
    <string name="titleCast">Elenco: </string>
    <string name="titleDescription">Descripción: </string>
    <string name="titleRated">Calificación: </string>
    <string name="TvOnAirSesson">Al aire temporada: </string>
    <string name="TvLastSesson">Última temporada emitida: </string>
    <string name="sessionExpired">Sesión expirada por inactividad</string>
    <string name="errorTitleConnect">Ocurrió un error</string>
    <string name="errorDescriptionConnect">Compruebe su conexión por favor o vuelva a intentarlo más tarde.</string>
</resources>